Fixed left align on smaller screens, added search button

--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@
   top: 0;
   left: 0;
   background-color: #000;
-  opacity: 0.7; /* see below for cross-browser opacity */
+  opacity: 0.7;
   display: none;
   z-index: 1;
 }
@@ -22,6 +22,11 @@
   margin: 20px auto;
   text-align: center;
 }
+
+form button {
+  margin: 15px auto;
+}
+
 #query {
   display: block;
   text-align: left;
